# mars-dashboard-fava

./: .gitignore  package.json  pyproject.toml
frontend/: build.cjs  build.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  App.jsx  App.tsx  index.css  index.js  main.jsx  main.tsx
frontend/src/components/: AGTable.js  AGTable.jsx  AGTable.tsx  CellFormatMenu.tsx  MainTable.jsx  MainTable.tsx
frontend/src/types/: DashboardData.tsx
frontend/src/utils/: data.tsx
frontend_extension/: build.js  index.js  manifest.json  package.json
frontend_extension/src/: balanceDialog.js  draggable.js  highlight.js  index.js  manifest.json  styles.js  utils.js
frontend_extension/src/extractors/: amex.js  future.js  robinhood.js
src/mars_dashboard/: MarsDashboard.js  __init__.py
src/mars_dashboard/templates/: MarsDashboard.html  style.css
